plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Restricted File Sharing System - Secure file sharing with user-specific access'

java {
	sourceCompatibility = JavaVersion.VERSION_21
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://projectlombok.org/edge-releases' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	
	runtimeOnly 'com.h2database:h2'
	
	compileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
	annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaExec) {
	jvmArgs += ["--enable-native-access=ALL-UNNAMED", "-Dspring.classformat.ignore=true"]
}

tasks.withType(Test) {
	useJUnitPlatform()
	jvmArgs += ["--enable-native-access=ALL-UNNAMED", "-Dspring.classformat.ignore=true"]
}
